# hmirls

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yaml  tests.yaml  tox.yaml
docs/: conf.py  index.rst  requirements.txt
docs/hmirls/: index.rst  operators.rst  problem.rst  regularization.rst  svd.rst  weighted_least_squares.rst
scripts/: create_update_docu.py  simple_example.py  test_run.py
src/hmirls/: operators.py  problem.py  regularization.py  svd.py  util.py  weighted_least_squares.py
tests/: test_operators.py
