[tool.poetry]
name = "hmirls"
version = "0.1.0"
description = "Library for Schatten-p norm minimization via iteratively reweighted least squares"
authors = ["Kristof Schroeder <kristof_schroeder@web.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
numpy = "^1.24.1"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


